made it lookbetter with css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Investment Calculator</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script type = "text/javascript" src="calculating-the-investment.js"></script>  
     </head>
     <body  style="background-color: rgb(43, 42, 51)">
