made the log table look better

--- a/index.html
+++ b/index.html
@@ -41,16 +41,19 @@
         <canvas id="barChart"></canvas>
         <table id="tableOfData">
             <tr>
-                <th>Year Start</th>
+                <th>Year # Start Amount</th>
+                <th>#% interest</th>
                 <th>Contribution Total</th>
-                <th>Year End</th>
+                <th>Year # End Amount</th>
             </tr>
             <tr>
                 <td>data</td>
                 <td>data</td>
                 <td>data</td>
+                <td>data</td>
             </tr>
             <tr>
+                <td>data</td>
                 <td>data</td>
                 <td>data</td>
                 <td>data</td>
