sort of working table (not dynamic to data)

--- a/index.html
+++ b/index.html
@@ -41,23 +41,19 @@
         <canvas id="barChart"></canvas>
         <table id="tableOfData">
             <tr>
-                <th>Year # Start Amount</th>
-                <th>#% interest</th>
-                <th>Contribution Total</th>
-                <th>Year # End Amount</th>
+                <th></th> <!--Year-->
+                <th></th> <!--Start Amount-->
+                <th></th> <!--#% interest-->
+                <th></th> <!--Contribution Total-->
+                <th></th> <!--End Amount-->
             </tr>
-            <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-            </tr>
-            <tr>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-                <td>data</td>
-            </tr>
+            <tr><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td></td><td></td><td></td><td></td><td></td></tr>
+            <tr><td></td><td></td><td></td><td></td><td></td></tr>
+
+
         </table>
     </body>
 </html>
