--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
         <!--bar chart-->
         <canvas id="barChart"></canvas>
-        <table id="tableOfData">
-        </table>
+        <!--table log-->
+        <div id="tableDiv"></div>
     </body>
 </html>
