made it look better

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <form>
             <!--starting amount-->
-            <label for="startAmount">Starting Amount: </label>
-            <input onchange="calculateInvestment()" type="text" id="startAmount" name="startAmountInput">
+            <label for="startAmount" class="marginTop">Starting Amount: </label>
+            <input onchange="calculateInvestment()" class="marginTop" type="text" id="startAmount" name="startAmountInput">
             <br><br>
             <!--contribution-->
             <label for="contribution">Contribution: </label>
