added totals table above the chart

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <br><br>
             <button type="button" id="button" onclick="calculateInvestment()">Submit</button>
         </header>
-        
+        <!-- totals -->
+        <div id="totalsDiv"></div>
         <!--bar chart-->
         <canvas id="barChart"></canvas>
         <!--table log-->
