added commas to +4 digit numbers + new screenshot

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script type = "text/javascript" src="calculating-the-investment.js"></script>  
+        <script type = "text/javascript" src="calculating-the-investment.js" defer></script>  
     </head>
     <body>
         <header>
