animations + sort of responsive to mobile layouts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <form>
+            <form class="introAnimation">
                 <div class="labels">
                     <label id="startAmountLabel" for="startAmount">Starting Amount: </label>
                     <br>
@@ -42,8 +42,7 @@
                     </select>
                 </div>
             </form>
-            <br><br>
-            <button type="button" id="button" onclick="calculateInvestment()">Submit</button>
+            <button type="button" id="button" class="introAnimation" onclick="calculateInvestment()">Submit</button>
         </header>
         <!-- totals -->
         <div id="totalsDiv"></div>
