--- a/index.html
+++ b/index.html
@@ -52,5 +52,10 @@
             <!--table log-->
             <div id="tableDiv"></div>
         </main>
+        <footer id="footer">
+            <a href="https://kylernelson.dev/" target="_blank">
+                <h5>kylernelson.dev</h5>
+            </a>
+        </footer>
     </body>
 </html>
