added favoicons + defer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Investment Calculator</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link defer rel="stylesheet" href="https://maxcdn.bootstrapcdn.">
+        <!-- script -->
+        <script defer type = "text/javascript" src="calculating-the-investment.js" defer></script>
+        <!-- favicons -->
+        <link defer rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+        <link defer rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+        <link defer rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+        <link defer rel="manifest" href="favicons/site.webmanifest">
         <!-- chart.js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-        <!-- local script -->
-        <script type = "text/javascript" src="calculating-the-investment.js" defer></script>  
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     </head>
     <body>
         <header>
