--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Simple Investment Calculator, Investment Calculator, Calculator, Stocks, ROI Calculator, Intrest Calculator, Compound Calculator">
+        <meta name="description" content="A simple calculator to see future returns on investments.">
+        <meta name="author" content="Kyler Nelson">
+        <meta name="theme-color" content="rgb(43, 42, 51)"/>
         <title>Investment Calculator</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link defer rel="stylesheet" href="https://maxcdn.bootstrapcdn.">
-        <!-- script -->
-        <script defer type = "text/javascript" src="calculating-the-investment.js" defer></script>
         <!-- favicons -->
         <link defer rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
         <link defer rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
         <link defer rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
         <link defer rel="manifest" href="favicons/site.webmanifest">
+        <!-- script -->
+        <script defer type = "text/javascript" src="calculating-the-investment.js"></script>
         <!-- chart.js -->
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+        <script defer src="chart.min.js"></script>
     </head>
     <body>
         <header>
