--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +10,25 @@
         <title>Investment Calculator</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- favicons -->
-        <link defer rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-        <link defer rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-        <link defer rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-        <link defer rel="manifest" href="favicons/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+        <link rel="manifest" href="favicons/site.webmanifest">
         <!-- script -->
         <script defer type = "text/javascript" src="calculating-the-investment.js"></script>
         <!-- chart.js -->
         <script defer src="chart.min.js"></script>
     </head>
-    <body>
+    <body style="font-family: Verdana;background-color: rgb(43, 42, 51);">
         <header>
             <form id="form" class="introAnimation">
                 <div class="label-input-container">
                     <label>Starting Amount:</label>
-                    <input required onchange="calculateInvestment()" type="number" min="0" id="startAmount" name="Start Amount">
+                    <input required onchange="calculateInvestment()" type="number" min="0" id="startAmount" name="Start Amount" aria-label="Start Amount">
                 </div>
                 <div class="label-input-container">
                     <label>Contribution:</label>
-                    <input required onchange="calculateInvestment()" type="number" min="0" id="contribution" name="Contribution">
+                    <input required onchange="calculateInvestment()" type="number" min="0" id="contribution" name="Contribution" aria-label="Contribution">
                 </div>
                 <div class="everyContributionDiv white">
                     <label id="everyContribution" for="date">every</label>
@@ -42,11 +42,11 @@
                 </div>
                 <div class="label-input-container">
                     <label>Interest Rate Percent:</label>
-                    <input required onchange="calculateInvestment()" type="number"  min="0" id="interest-rate" name="Interest Rate">
+                    <input required onchange="calculateInvestment()" type="number"  min="0" id="interest-rate" name="Interest Rate" aria-label="Interest Rate Percent">
                 </div>
                 <div class="label-input-container">
                     <label>Years Of Growth:</label>
-                    <input required onchange="calculateInvestment()" type="number"  min="1" id="years-of-growth" name="Years Of Growth">
+                    <input required onchange="calculateInvestment()" type="number"  min="1" id="years-of-growth" name="Years Of Growth" aria-label="Years Of Growth">
                 </div>
             </form>
             <button type="submit" value="Submit" id="button" class="introAnimation" onclick="calculateInvestment()">Submit</button>
